# controller/good.js
@@ -1,3 +1,12 @@
+const Good=require("../model/good")
+const constants=require("../util/constants")
+
 exports.getGoods=(req,res,next)=>{
-    res.status(200).json({msg: "Goods working fine!"})
+    Good.find().limit(5)
+    .then(goodsArray=>{
+        res.status(200).json({goodsArray: goodsArray})
+    })
+    .catch(error=>{
+        res.status(500).json({status: constants.status2, response: constants.string6})
+    })
 }
